# blue-team-ai

./: .gitignore  README.md  pyproject.toml  requriements.txt  results.json  test_log.txt
blue_team_ai/: ai.py  cli.py  deepseek_ai.py  enrichment.py  results.json  rules.py
blue_team_ai/data/: iocs.csv  iocs_converted.csv
blue_team_ai/exceptions/: unsupported_format.py
blue_team_ai/parsers/: parse_logs.py
results/: enriched.json  results2.json
tests/: test_ai.py  test_cli_diagnostic.py  test_cli_integration.py  test_encrichment.py  test_parse_logs.py  test_rules.py
